[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "day1_part1"
path= "src/day1_part1/main.rs"

[[bin]]
name = "day1_part2"
path= "src/day1_part2/main.rs"

[[bin]]
name = "day2_part1"
path = "src/day2_part1/main.rs"

[[bin]]
name = "day2_part2"
path = "src/day2_part2/main.rs"

[[bin]]
name = "day3_part1"
path = "src/day3_part1/main.rs"

[[bin]]
name = "day3_part2"
path = "src/day3_part2/main.rs"

[[bin]]
name = "day4_part1"
path = "src/day4_part1/main.rs"

[[bin]]
name = "day4_part2"
path = "src/day4_part2/main.rs"

[[bin]]
name = "day5_part1"
path = "src/day5_part1/main.rs"

[[bin]]
name = "day5_part2"
path = "src/day5_part2/main.rs"

[[bin]]
name = "day6_part1"
path = "src/day6_part1/main.rs"

[[bin]]
name = "day6_part2"
path = "src/day6_part2/main.rs"

[[bin]]
name = "day7_part1"
path = "src/day7_part1/main.rs"

[[bin]]
name = "day7_part2"
path = "src/day7_part2/main.rs"

[[bin]]
name = "day8_part1"
path = "src/day8_part1/main.rs"

[[bin]]
name = "day8_part2"
path = "src/day8_part2/main.rs"

[[bin]]
name = "day9_part1"
path = "src/day9_part1/main.rs"

[[bin]]
name = "day9_part2"
path = "src/day9_part2/main.rs"

[[bin]]
name = "day10_part1"
path = "src/day10_part1/main.rs"

[[bin]]
name = "day10_part2"
path = "src/day10_part2/main.rs"

[[bin]]
name = "day11_part1"
path = "src/day11_part1/main.rs"

[[bin]]
name = "day11_part2"
path = "src/day11_part2/main.rs"

[[bin]]
name = "day12_part1"
path = "src/day12_part1/main.rs"

[[bin]]
name = "day12_part2"
path = "src/day12_part2/main.rs"

[[bin]]
name = "day13_part1"
path = "src/day13_part1/main.rs"

[[bin]]
name = "day13_part2"
path = "src/day13_part2/main.rs"

[[bin]]
name = "day14_part1"
path = "src/day14_part1/main.rs"

[[bin]]
name = "day14_part2"
path = "src/day14_part2/main.rs"

[[bin]]
name = "day15_part1"
path = "src/day15_part1/main.rs"

[[bin]]
name = "day15_part2"
path = "src/day15_part2/main.rs"

[[bin]]
name = "day16_part1"
path = "src/day16_part1/main.rs"

[[bin]]
name = "day16_part2"
path = "src/day16_part2/main.rs"

[[bin]]
name = "day17_part1"
path = "src/day17_part1/main.rs"

[[bin]]
name = "day17_part2"
path = "src/day17_part2/main.rs"

[[bin]]
name = "day18_part1"
path = "src/day18_part1/main.rs"

[[bin]]
name = "day18_part2"
path = "src/day18_part2/main.rs"

[[bin]]
name = "day19_part1"
path = "src/day19_part1/main.rs"

[[bin]]
name = "day19_part2"
path = "src/day19_part2/main.rs"

[dependencies]
num-format = "0.4.4"
regex = "1.10.2"
itertools = "0.12.0"
num = "0.4.1"
lazy_static = "1.4.0"
rayon = "1.8.1"
log = "0.4.20"
timeit = "0.1.2"
